Botões de rolagem para os lados concluídos

--- a/index.html
+++ b/index.html
@@ -68,75 +68,99 @@
                 </div>
 
                 <div class="recommended-product">
-                    <div class="products">
-                        <div class="img-default">
-                            <img src="assets/img/roupas-masculinas/camisa-masculina-verde-manga-comprida.webp" alt="">
+                    <a href="#button-back" class="button-back-next">
+                        <div class="button-back">
+                            <p>&lt</p>
                         </div>
+                    </a>
 
-                        <div class="title-img">
-                            <p>Camisa Masculina Manga Cumprida</p>
-                        </div>
-
-                        <div class="price">
-                            <p>R$ 69,99</p>
-                        </div>
-                    </div>
-
-                    <div class="products">
-                        <div class="img-default">
-                            <img src="assets/img/roupas-masculinas/jaqueta-masculina-azul.webp" alt="">
-                        </div>
-
-                        <div class="title-img">
-                            <p>Casaco Moletom Azul Manga Cumprida</p>
-                        </div>
-
-                        <div class="price">
-                            <p>R$ 69,99</p>
-                        </div>
-                    </div>
-
-                    <div class="products">
-                        <div class="img-default">
-                            <img src="assets/img/roupas-masculinas/sueter-masculino.webp" alt="">
-                        </div>
-
-                        <div class="title-img">
-                            <p>Camisa Masculina Manga cumprida</p>
-                        </div>
-
-                        <div class="price">
-                            <p>R$ 69,99</p>
-                        </div>
-                    </div>
-
-                    <div class="products">
-                        <div class="img-default">
-                            <img src="assets/img/roupas-masculinas/t-shirt-marron.webp" alt="">
-                        </div>
-
-                        <div class="title-img">
-                            <p>T-shirt Masculina Marrom New York</p>
-                        </div>
-
-                        <div class="price">
-                            <p>R$ 69,99</p>
-                        </div>
-                    </div>
-
-                    <div class="products">
-                        <div class="img-default">
-                            <img src="assets/img/roupas-masculinas/t-shirt-preta.webp" alt="">
+                    <a href="#redommended-1">
+                        <div class="products">
+                            <div class="img-default">
+                                <img src="assets/img/roupas-masculinas/camisa-masculina-verde-manga-comprida.webp" alt="">
+                            </div>
 
                             <div class="title-img">
-                                <p>T-shirt Masculina Preta Detalhes Brancos</p>
+                                <p>Camisa Masculina Manga Cumprida</p>
                             </div>
 
                             <div class="price">
                                 <p>R$ 69,99</p>
                             </div>
                         </div>
-                    </div>
+                    </a>
+
+                    <a href="#redommended-2">
+                        <div class="products">
+                            <div class="img-default">
+                                <img src="assets/img/roupas-masculinas/jaqueta-masculina-azul.webp" alt="">
+                            </div>
+
+                            <div class="title-img">
+                                <p>Casaco Moletom Azul Manga Cumprida</p>
+                            </div>
+
+                            <div class="price">
+                                <p>R$ 69,99</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="#redommended-3">
+                        <div class="products">
+                            <div class="img-default">
+                                <img src="assets/img/roupas-masculinas/sueter-masculino.webp" alt="">
+                            </div>
+
+                            <div class="title-img">
+                                <p>Camisa Masculina Manga cumprida</p>
+                            </div>
+
+                            <div class="price">
+                                <p>R$ 69,99</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="#recommended-4">
+                        <div class="products">
+                            <div class="img-default">
+                                <img src="assets/img/roupas-masculinas/t-shirt-marron.webp" alt="">
+                            </div>
+
+                            <div class="title-img">
+                                <p>T-shirt Masculina Marrom New York</p>
+                            </div>
+
+                            <div class="price">
+                                <p>R$ 69,99</p>
+                            </div>
+                        </div>
+                    </a>
+
+
+                    <a href="#recommended-5">
+                        <div class="products">
+                            <div class="img-default">
+                                <img src="assets/img/roupas-masculinas/t-shirt-preta.webp" alt="">
+
+                                <div class="title-img">
+                                    <p>T-shirt Masculina Preta Detalhes Brancos</p>
+                                </div>
+
+                                <div class="price">
+                                    <p>R$ 69,99</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    
+                    <a href="#button-next" class="button-back-next">
+                        <div class="button-next">
+                            <p>&gt</p>
+                        </div>
+                    </a>
+
                 </div>
             </div>
          </section>
