--- a/index.html
+++ b/index.html
@@ -166,5 +166,57 @@
          </section>
     </main>
 
+    <footer>
+        <div class="information">
+            <div class="about">
+                <h4>Conheça-nos</h4>
+                <a href="#"><p>Sobre a SS</p></a>
+                <a href="#"><p>Parceiros</p></a>
+                <a href="#"><p>Carreiras</p></a>
+                <a href="#"><p>Equipe</p></a>
+                <a href="#"><p>Contatos</p></a>
+            </div>
+
+            <div class="help">
+                <h4>Ajuda</h4>
+                <a href="#"><p>Nossa politica de frete</p></a>
+                <a href="#"><p>Rastreio de pedido</p></a>
+                <a href="#"><p>Dúvidas Frequentes</p></a>
+                <a href="#"><p>politica de devolução</p></a>
+                <a href="#"><p>Informações adicionais</p></a>
+            </div>
+
+            <div class="payment">
+                <h4>Pagamentos</h4>
+                <a href="#"><p>Cartão de crédito</p></a>
+                <a href="#"><p>Boleto</p></a>
+                <a href="#"><p>Cartão de débito</p></a>
+                <a href="#"><p>Pix</p></a>
+                <a href="#"><p>Cripto</p></a>
+            </div>
+        </div>
+
+        <div class="all-sociais">
+            <div class="social-network">
+                <div class="title">
+                    <h4>Nossas redes</h4>
+                </div>
+
+                <div class="sociais-icons">
+                    <a href="#" class="social"><img src="assets/img/logo-redes-sociais/instagram.png" alt="" id="instagram"></a>
+
+                    <a href="#" class="social"><img src="assets/img/logo-redes-sociais/facebook.png" alt="" id="facebook"></a>
+
+                    <a href="#" class="social"><img src="assets/img/logo-redes-sociais/whatsapp.png" alt="" id="whatsapp"></a>
+                </div>                      
+            </div>
+        </div>
+
+        <div class="company-information">
+            <p>@2022 street style varejo brasil Ltda. | CNPJ 15.566.039/0001-05</p>
+            <p>Rua marques de herval, 385 - Belém-PA CEP: 00000-000</p>
+        </div>
+    </footer>
+
 </body>
 </html>
