Section categorias concluido

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </a>
 
                     <a href="#redommended-1">
-                        <div class="products">
+                        <div class="products first">
                             <div class="img-default">
                                 <img src="assets/img/roupas-masculinas/camisa-masculina-verde-manga-comprida.webp" alt="">
                             </div>
@@ -91,7 +91,7 @@
                     </a>
 
                     <a href="#redommended-2">
-                        <div class="products">
+                        <div class="products first">
                             <div class="img-default">
                                 <img src="assets/img/roupas-masculinas/jaqueta-masculina-azul.webp" alt="">
                             </div>
@@ -107,7 +107,7 @@
                     </a>
 
                     <a href="#redommended-3">
-                        <div class="products">
+                        <div class="products first">
                             <div class="img-default">
                                 <img src="assets/img/roupas-masculinas/sueter-masculino.webp" alt="">
                             </div>
@@ -123,7 +123,7 @@
                     </a>
 
                     <a href="#recommended-4">
-                        <div class="products">
+                        <div class="products first">
                             <div class="img-default">
                                 <img src="assets/img/roupas-masculinas/t-shirt-marron.webp" alt="">
                             </div>
@@ -140,7 +140,88 @@
 
 
                     <a href="#recommended-5">
-                        <div class="products">
+                        <div class="products first">
+                            <div class="img-default">
+                                <img src="assets/img/roupas-masculinas/t-shirt-preta.webp" alt="">
+
+                                <div class="title-img">
+                                    <p>T-shirt Masculina Preta Detalhes Brancos</p>
+                                </div>
+
+                                <div class="price">
+                                    <p>R$ 69,99</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="#redommended-1 ">
+                        <div class="products secund">
+                            <div class="img-default">
+                                <img src="assets/img/roupas-masculinas/camisa-masculina-verde-manga-comprida.webp" alt="">
+                            </div>
+
+                            <div class="title-img">
+                                <p>Camisa Masculina Manga Cumprida</p>
+                            </div>
+
+                            <div class="price">
+                                <p>R$ 69,99</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="#redommended-2 ">
+                        <div class="products secund">
+                            <div class="img-default">
+                                <img src="assets/img/roupas-masculinas/jaqueta-masculina-azul.webp" alt="">
+                            </div>
+
+                            <div class="title-img">
+                                <p>Casaco Moletom Azul Manga Cumprida</p>
+                            </div>
+
+                            <div class="price">
+                                <p>R$ 69,99</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="#redommended-3">
+                        <div class="products secund">
+                            <div class="img-default">
+                                <img src="assets/img/roupas-masculinas/sueter-masculino.webp" alt="">
+                            </div>
+
+                            <div class="title-img">
+                                <p>Camisa Masculina Manga cumprida</p>
+                            </div>
+
+                            <div class="price">
+                                <p>R$ 69,99</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="#recommended-4">
+                        <div class="products secund">
+                            <div class="img-default">
+                                <img src="assets/img/roupas-masculinas/t-shirt-marron.webp" alt="">
+                            </div>
+
+                            <div class="title-img">
+                                <p>T-shirt Masculina Marrom New York</p>
+                            </div>
+
+                            <div class="price">
+                                <p>R$ 69,99</p>
+                            </div>
+                        </div>
+                    </a>
+
+
+                    <a href="#recommended-5 ">
+                        <div class="products secund">
                             <div class="img-default">
                                 <img src="assets/img/roupas-masculinas/t-shirt-preta.webp" alt="">
 
@@ -164,6 +245,77 @@
                 </div>
             </div>
          </section>
+
+         <section class="section-category">
+            <div class="container">
+                <div class="title">
+                    <h2>Encontre por categoria</h2>
+                </div>
+                <div class="all-categorys">
+                    <a href="#">
+                        <div class="categorys">
+                            <h3>Camisetas</h3>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="categorys">
+                            <h3>Intimos</h3>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="categorys">
+                            <h3>Calças</h3>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="categorys">
+                            <h3>Moletons</h3>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="categorys">
+                            <h3>Calçados</h3>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="categorys">
+                            <h3>Relógios</h3>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="categorys">
+                            <h3>Cintos</h3>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="categorys">
+                            <h3>Mochilas</h3>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="categorys">
+                            <h3>Chápeus</h3>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="categorys">
+                            <h3>Colares</h3>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="categorys">
+                            <h3>Over-Size</h3>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="categorys">
+                            <h3>Anéis</h3>
+                        </div>
+                    </a>
+            </div>
+            </div>
+         </section>
+
     </main>
 
     <footer>
