--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/patterns.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/Camisetas/IconAppleTransparent.webp" type="image/x-icon">
-    <title>Street Style</title>
+    <title>iPhone Pro</title>
 </head>
 <body id="body">
     <header id="logoStreetStyle">
